Fix log url parameter in template.

--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -30,7 +30,7 @@ iframe {
     </fieldset>
 </form>
 </div>
-<iframe src="/log?url={{ log_url }}&url_filter={{ request.args.get('url_filter', '') }}">
+<iframe src="/log?log_url={{ log_url }}&url_filter={{ request.args.get('url_filter', '') }}">
 </iframe>
 </body>
 </html>
