Fix query string an allow long-winded responses.

--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -30,7 +30,7 @@ iframe {
     </fieldset>
 </form>
 </div>
-<iframe src="{{ url_for( 'log', **request.args) }}">
+<iframe src="{{ url_for( 'log') }}?{{ request.query_string }}">
 </iframe>
 </body>
 </html>
