Python 3 and use build-in example crawl log.

--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -30,7 +30,7 @@ iframe {
     </fieldset>
 </form>
 </div>
-<iframe src="{{ url_for( 'log') }}?{{ request.query_string }}">
+<iframe src="{{ url_for( 'log') }}?{{ request.query_string.decode('utf-8') }}">
 </iframe>
 </body>
 </html>
