--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -4,34 +4,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>log viewer</title>
 <style>
-body, html {width: 100%; height: 100%; margin: 0; padding: 0}
+body, html {width: 100%; height: 100%; margin: 0; padding: 0; padding-top: 3px;}
 iframe {
     display: block;
-    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 90%;
     border: none;
-    top: 50px;
 }
-#toolbar {
+.toolbar {
     height: 50px;
 }
 </style>
 </head>
 <body>
-<div id="toolbar">
+
 <form class="pure-form" action="/" method="get">
-    <fieldset>
-        <label for="log_url">Log</label>
-        <input name="log_url" type="text" value="{{ log_url }}"/>
-        <label for="filter">Filter</label>
-        <input name="url_filter" type="text" value="{{ request.args.get('url_filter', '') }}"/>
-        <button type="submit" class="pure-button pure-button-primary">View</button>
-    </fieldset>
+
+    <div class="toolbar">
+        <div class="pure-g">
+            <div class="pure-u-5-5">
+                &nbsp;<label for="filter">URL Filter</label>&nbsp;
+                <input name="url_filter" type="text" value="{{ request.args.get('url_filter', '') }}"/>
+                <button type="submit" class="pure-button pure-button-primary">Filter</button>
+            </div>
+        </div>
+    </div>
+
+    <iframe src="{{ url_for( 'log') }}?{{ request.query_string.decode('utf-8') }}">
+    </iframe>
+
+    <div class="toolbar">
+        <div class="pure-g">
+            <div class="pure-u-4-5">
+                &nbsp;<label for="log_url">Log file</label>&nbsp;
+                <input name="log_url" type="text" value="{{ log_url }}" style="width:90%"/>
+            </div>
+            <div class="pure-u-1-5"><button type="submit" class="pure-button pure-button-primary">View</button></div>
+        </div>
+    </div>
 </form>
-</div>
-<iframe src="{{ url_for( 'log') }}?{{ request.query_string.decode('utf-8') }}">
-</iframe>
+
 </body>
 </html>
 
