--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -42,8 +42,12 @@ iframe {
     <div class="toolbar">
         <div class="pure-g">
             <div class="pure-u-4-5">
-                &nbsp;<label for="log_url">Log file</label>&nbsp;
-                <input name="log_url" type="text" value="{{ log_url }}" style="width:90%"/>
+                &nbsp;<label for="topic">Crawl log</label>&nbsp;
+                 <select id="topic" name="topic">
+                     {% for t in topics %}
+                         <option value="{{ t }}" {% if topic == t %} selected {% endif %}>{{ topics[t]['title'] }}</option>
+                     {% endfor %}
+                 </select>
             </div>
             <div class="pure-u-1-5"><button type="submit" class="pure-button pure-button-primary">View</button></div>
         </div>
