--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -48,6 +48,10 @@ iframe {
                          <option value="{{ t }}" {% if topic == t %} selected {% endif %}>{{ topics[t]['title'] }}</option>
                      {% endfor %}
                  </select>
+                <label for="from_date">From date</label>
+                <input type="date" name="from_date" value="{{ from_date }}">
+                <label for="log_hours">until (hours) later</label>
+                <input type="number" name="log_hours" value="{{ log_hours }}">
             </div>
             <div class="pure-u-1-5"><button type="submit" class="pure-button pure-button-primary">View</button></div>
         </div>
