--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>log viewer</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, html {width: 100%; height: 100%; margin: 0; padding: 0;}
 iframe {
@@ -49,7 +50,7 @@ iframe {
                      {% endfor %}
                  </select>
                 <label for="from_date">From date</label>
-                <input type="date" name="from_date" value="{{ from_date }}">
+                <input name="from_date" id="from_date" value="{{ from_date }}">
                 <label for="log_hours">until (hours) later</label>
                 <input type="number" name="log_hours" value="{{ log_hours }}">
             </div>
@@ -57,6 +58,13 @@ iframe {
         </div>
     </div>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script>
+flatpickr("#from_date", {
+    enableTime: true
+});
+</script>
 
 </body>
 </html>
