Switch to monospaced layout.

--- a/templates/loglines.html
+++ b/templates/loglines.html
@@ -7,7 +7,7 @@ body, html {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: monospace;
 }
 .log-lines {
     white-space: nowrap;
@@ -25,13 +25,13 @@ body, html {
 }
 .lc-m {
   display: inline-block !important;
-  width: 13em;
+  width: 15em;
   overflow: hidden;
   white-space: nowrap;
 }
 .lc-l {
   display: inline-block !important;
-  width: 24em;
+  width: 30em;
   overflow: hidden;
   white-space: nowrap;
 }
