--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -10,11 +10,12 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-y: hidden;
+    display: flex;
+    flex-direction: column
 }
 iframe {
     width: 100%;
-    height: 100%;
+    flex-grow: 1;
     border: none;
     border-top: 1px solid black;
     padding-top: 0.25em;
@@ -22,12 +23,13 @@ iframe {
 .toolbar {
   padding: 0.25em;
   background-color: #f8f8f8;
+  margin: 0;
 }
 </style>
 </head>
 <body>
 
-<form class="pure-form" action="/" method="get">
+<form class="pure-form toolbar" action="/" method="get">
 
     <div class="pure-g toolbar">
         <div class="pure-u-4-5">
@@ -58,10 +60,10 @@ iframe {
         </div>
     </div>
 
-    <iframe src="{{ url_for( 'log') }}?{{ request.query_string.decode('utf-8') }}">
-    </iframe>
-
 </form>
+
+<iframe src="{{ url_for( 'log') }}?{{ request.query_string.decode('utf-8') }}">
+</iframe>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
